# embed

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  rustfmt.toml
.github/workflows/: build-docker.yml  ci-test-rust.yml  docker-build.yml  test-helm.yml  test-rust.yml
config/: base.yaml  local.yaml  prod.yaml
deploy/: helmfile.yaml
deploy/charts/app/: Chart.yaml  values.yaml
deploy/charts/app/templates/: _helpers.tpl  serviceaccount.yaml  serving.yaml
deploy/charts/app/templates/tests/: test-connection.yaml
deploy/environments/: dev.yaml  prod.yaml
deploy/helm/: helmfile.yaml
deploy/helm/values/: istiod.yaml  prometheus.yaml
deploy/scripts/: install-knative.sh  push-helm.sh  setup-gcr-connection.sh
deploy/scripts/common/: check-env.sh  error.sh  print.sh
deploy/values/: embed.yaml  grafana.yaml  istio-base.yaml  istiod.yaml
proto/: embed.proto
scripts/: setup-gcr-connection.sh
src/: client.rs  configuration.rs  lib.rs  server.rs  telemetry.rs
src/server/: application.rs  main.rs  mod.rs  startup.rs
src/server/models/: embed.rs  mod.rs
tests/: helpers.rs
tests/server/: embed.rs
