[package]
name = "embed-me"
version = "0.1.0"
edition = "2021"

[[bin]]
    name = "server"
    path = "src/server/main.rs"

[[bin]]
    name = "client"
    path = "src/client/main.rs"

[dependencies]
tonic = "0.9.2"
prost = "0.11.9"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
config = "0.13.3"

[build-dependencies]
tonic-build = "0.9"
