[package]
name = "embed"
description = "vector embedding generator hosted over grpc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server/main.rs"

[dependencies]
config =  "0.13.3"
openssl = { version = "0.10.60", features = ["vendored"] }
prost = "0.11.9"
rust-bert = { version = "0.21.0" }
serde = "1.0.177"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.9.2"
tracing = "0.1.37"
tracing-bunyan-formatter = "0.3.8"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }

[build-dependencies]
tonic-build = "0.9.2"

[dev-dependencies]
once_cell = "1.18.0"
